[package]
name = "touptek"
version = "0.9.0"
description = "Bindings for Touptek ToupLite image acquisition library"
authors = ["whitequark <whitequark@whitequark.org>"]
repository = "https://github.com/whitequark/rust-touptek"
documentation = "http://www.rust-ci.org/whitequark/rust-touptek/doc/touptek/"
keywords = ["library", "bindings", "hardware", "image processing", "science"]
readme = "README.md"
license = "MIT"

[dependencies]
libc = "*"
bitflags = "0.3"

[dependencies.fourcc]
git = "git://github.com/rust-lang/fourcc"
